# COM3528_2025_Team8

./: CMakeLists.txt  README.md  app.py  app_hm.py  app_ngrok_frozen_image.py  apple.py  controller.launch  fake_joy.py  index_hm.html  index_ngrok_frozen_image.html  miro_joy_control.py  package.xml  requirements.txt  visionRetrieve.py
launch/: controller.launch
scripts/: fake_joy.py  visionRetrieved.py
templates/: index.html
